--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,11 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 
+
 ; 🔵 INFO: Serial monitor configuration for debugging
 monitor_speed = 115200
 monitor_filters = esp8266_exception_decoder
+; extra_scripts = .pio/scripts/run_all.py
 
 ; 🔵 INFO: Upload configuration - can switch to OTA after initial flash
 upload_speed = 921600
