Refactor upload settings, enhance watchdog management, and improve LittleFS initialization in web server

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,9 @@ monitor_filters = esp8266_exception_decoder
 ; extra_scripts = .pio/scripts/run_all.py
 
 ; 🔵 INFO: Upload configuration - can switch to OTA after initial flash
-upload_speed = 921600
+upload_speed = 74880
+upload_resetmethod = nodemcu
+upload_port = /dev/tty.usbserial-110
 ; upload_protocol = espota
 ; upload_port = stairlight.local
 
@@ -27,6 +29,9 @@ build_flags =
     -D VTABLES_IN_FLASH
     -O2
 
+; 🔵 INFO: Library dependency mode to prevent wrong library selection
+lib_ldf_mode = chain+
+
 ; 🔵 INFO: LittleFS configuration for web interface files
 board_build.filesystem = littlefs
 board_build.ldscript = eagle.flash.4m2m.ld
@@ -35,7 +40,7 @@ board_build.ldscript = eagle.flash.4m2m.ld
 lib_deps = 
     adafruit/Adafruit PWM Servo Driver Library@^3.0.2
     rfetick/MPU6050_light@^1.1.0
-    me-no-dev/ESPAsyncWebServer@^1.2.3
-    me-no-dev/ESPAsyncTCP@^1.2.2
+    https://github.com/me-no-dev/ESPAsyncTCP.git#master
+    https://github.com/me-no-dev/ESPAsyncWebServer.git#master
     bblanchon/ArduinoJson@^7.2.0
     arduino-libraries/NTPClient@^3.2.1
