Update upload speed in platformio.ini and adjust WiFi configuration defaults in storage.cpp for development

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,9 @@ monitor_filters = esp8266_exception_decoder
 ; extra_scripts = .pio/scripts/run_all.py
 
 ; 🔵 INFO: Upload configuration - can switch to OTA after initial flash
-upload_speed = 74880
-upload_resetmethod = nodemcu
-upload_port = /dev/tty.usbserial-110
+upload_speed = 115200
+; upload_resetmethod = nodemcu
+; upload_port = /dev/tty.usbserial-110
 ; upload_protocol = espota
 ; upload_port = stairlight.local
 
