--- a/platformio.ini
+++ b/platformio.ini
@@ -17,10 +17,13 @@ monitor_filters = esp8266_exception_decoder
 
 ; 🔵 INFO: Upload configuration - can switch to OTA after initial flash
 upload_speed = 115200
-; upload_resetmethod = nodemcu
-; upload_port = /dev/tty.usbserial-110
 ; upload_protocol = espota
-; upload_port = stairlight.local
+; upload_port = 192.168.178.123
+; upload_flags = 
+;     --auth=
+; Uncomment for serial upload:
+; upload_protocol = esptool
+; upload_port = /dev/cu.usbserial-0001
 
 ; 🔵 INFO: Build flags for optimization and feature control
 build_flags = 
